--- a/static/miembros.html
+++ b/static/miembros.html
@@ -2,43 +2,39 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link id="estilo" rel="stylesheet" type="text/css" href="./default.css">
+        <link id="estilo" rel="stylesheet" type="text/css" href="./css/default.css">
         <title>Miembros</title>
     </head>
     <body>
         <h1>Miembros del grupo</h1>
-        <p><a href="#Ignacio"> Ignacio</a></p>
-        <p><a href="#Jorge"> Jorge</a></p>
-        <p><a href="#Alberto"> Alberto</a></p>
-        <p><a href="#Mael"> Maël</a></p>
-        <p><a href="#Cesar"> César</a></p>
+        <p><a href="#Ignacio"> Ignacio</a>, <a href="#Jorge"> Jorge</a>, <a href="#Alberto"> Alberto</a>, <a href="#Mael"> Maël</a>, <a href="#Cesar"> César</a></p>
         <div class = "miembros-container">
             <div class="miembro">
                 <h2 id="Ignacio" class="nombre">Ignacio Andrés Doménech Arellano</h2>
-                <img src ="./img/IADA.png" class ="foto-perfil"><p></p>
+                <img src ="./img/IADA.png" class ="foto-perfil"><br>
                 <a href="mailto:ignadome@ucm.es">ignadome@ucm.es</a>
                 <p>Me encanta no hacer nada, perder el tiempo y hacer el vago. Lo mejor es que aun así espero sacar buenas notas.</p>              
             </div>
             <div class="miembro">
                 <h2 id="Jorge" class="nombre">Jorge Rodríguez de la Osada</h2>
-                <img src ="./img/FotoJorge.png"class ="foto-perfil"><p></p>
+                <img src ="./img/FotoJorge.png"class ="foto-perfil"><br>
                 <a href="mailto:jorrod06@ucm.es">jorrod06@ucm.es</a>
                 <p>El dürum es superior al kebab y no estoy dispuesto a discutirlo</p>
             </div>
             <div class="miembro">
                 <h2 id="Alberto" class="nombre">Alberto Delgado Cabrera</h2>
-                <img src ="./img/ADC.png"class ="foto-perfil"><p></p>
+                <img src ="./img/ADC.png"class ="foto-perfil"><br>
                 <a href="mailto:albede04@ucm.es">albede04@ucm.es</a>
             </div>
             <div class="miembro">
                 <h2 id="Mael"  class="nombre">Maël Humberto García</h2>
-                <img src ="./img/MHG.png"class ="foto-perfil"><p></p>
+                <img src ="./img/MHG.png"class ="foto-perfil"><br>
                 <a href="mailto:maelhg01@ucm.es">maelhg01@ucm.es</a>
                 <p>Fan de Persona y Dark Souls. Videojuegos como estilo de vida.</p>
             </div>
             <div class="miembro">
                 <h2 id="Cesar" class="nombre">Cesar de Esteban Elvira</h2>
-                <img src ="./img/CEE.png"class ="foto-perfil"><p></p>
+                <img src ="./img/CEE.png"class ="foto-perfil"><br>
                 <a href="mailto:cesesteb@ucm.es">cesesteb@ucm.es</a>
             </div>
         </div>
