Subido boceto para página de juego
Lo que dice el título

--- a/static/bocetos.html
+++ b/static/bocetos.html
@@ -7,11 +7,9 @@
     </head>
     <body>
         <h1>Bocetos de la práctica:<h1>
-        <div class="Imagenes_bocetos">
-            <div class = "Inicio_bocetos">
                 <h2>Página de inicio:</h2>
                 <img src ="./img/pagina_inicio_web.png"><p></p>
-            </div>
-        </div>
+                <h2>Página de un juego:</h2>
+                <img src ="./img/pagina_videojuego.png"><p></p>
     </body>
 </html>
