--- a/static/bocetos.html
+++ b/static/bocetos.html
@@ -11,5 +11,11 @@
                 <img src ="./img/pagina_inicio_web.png"><p></p>
                 <h2>Página de un juego:</h2>
                 <img src ="./img/pagina_videojuego.png"><p></p>
+                <h2>Página de busqueda de un juego:</h2>
+                <img src ="./img/pagina_busqueda_juegos.png"><p></p>
+                <h2>Página de perfil de un usuario:</h2>
+                <img src ="./img/pagina_perfil_usuario.png"><p></p>
+                <h2>Formulario para añadir un juego con administrador:</h2>
+                <img src ="./img/boceto_formulario_annadir_juego_admin.png"><p></p>
     </body>
 </html>
