Pagina de noticias

--- a/static/bocetos.html
+++ b/static/bocetos.html
@@ -15,7 +15,10 @@
                 <img src ="./img/pagina_busqueda_juegos.png"><p></p>
                 <h2>Página de perfil de un usuario:</h2>
                 <img src ="./img/pagina_perfil_usuario.png"><p></p>
+                <h2>Página principal de noticias:</h2>
+                <img src ="./img/boceto_pagina_principal_noticias.png"><p></p>
                 <h2>Formulario para añadir un juego con administrador:</h2>
                 <img src ="./img/boceto_formulario_annadir_juego_admin.png"><p></p>
+
     </body>
 </html>
