--- a/static/contacto.html
+++ b/static/contacto.html
@@ -7,17 +7,17 @@
     </head>
     <body>
         <h1>Formulario de contacto</h1>
-        <div class="form-container">
+        <section class="form-container">
             <form action="mailto:ignadome@ucm.es" method="post" enctype="text/plain">
-            <div class="form-group">
+            <section class="form-group">
                 <label for="nombre">Nombre y Apellidos</label><br>
-                <input type="text" id="nombre" name="nombre" required>   
-            </div>
-            <div class="form-group">
+                <input type="text/plain" id="nombre" name="nombre" required>   
+            </section>
+            <section class="form-group">
                 <label for="mail">Correo electrónico</label><br>
                 <input type="email" id="mail" name="mail" required>   
-            </div>
-            <div class="form-group">
+            </section>
+            <section class="form-group">
                 <label for="Motivo">Motivo:</label><br>
                 <input type="radio" id="evaluacion" name="motivo" required>   
                 <label for="evaluacion">Evaluacion</label>
@@ -25,18 +25,16 @@
                 <label for="sugerencias">Sugerencias</label>
                 <input type="radio" id="criticas" name="motivo" required>   
                 <label for="criticas">Criticas</label>
-                
-            </div>
-            <div class="form-group">
+            </section>
+            <section class="form-group">
                 <label for="mensaje">Mensaje:</label><br>
                 <textarea id="mensaje" name="mensaje" class = "mensaje" rows ="4" required></textarea>
-            </div>
-            <div class="form-group">
+                </section>
+                <section class="form-group">
                 <input type="checkbox" id="terminos" name="terminos" required> 
                 <label for="terminos">Aceptas los terminos y servicios</label>
-                 
-            </div>
+            </section>
             <button type="submit" class = "enviar">Enviar</button>
-        </div>
+        </section>
     </body>
 </html>
