--- a/static/contacto.html
+++ b/static/contacto.html
@@ -10,15 +10,15 @@
         <section class="form-container">
             <form action="mailto:ignadome@ucm.es" method="post" enctype="text/plain">
             <section class="form-group">
-                <label for="nombre">Nombre y Apellidos</label><br>
+                <p><label for="nombre">Nombre y Apellidos</label></p>
                 <input type="text/plain" id="nombre" name="nombre" required>   
             </section>
             <section class="form-group">
-                <label for="mail">Correo electrónico</label><br>
+                <p><label for="mail">Correo electrónico</label></p>
                 <input type="email" id="mail" name="mail" required>   
             </section>
             <section class="form-group">
-                <label for="Motivo">Motivo:</label><br>
+                <p><label for="Motivo">Motivo:</label></p>
                 <input type="radio" id="evaluacion" name="motivo" required>   
                 <label for="evaluacion">Evaluacion</label>
                 <input type="radio" id="sugerencias" name="motivo" required>   
@@ -27,7 +27,7 @@
                 <label for="criticas">Criticas</label>
             </section>
             <section class="form-group">
-                <label for="mensaje">Mensaje:</label><br>
+                <p><label for="mensaje">Mensaje:</label></p>
                 <textarea id="mensaje" name="mensaje" class = "mensaje" rows ="4" required></textarea>
                 </section>
                 <section class="form-group">
