Añadido 6 bocetos, ordenado bocetos por funcionalidad y cambiado titulo

--- a/static/bocetos.html
+++ b/static/bocetos.html
@@ -3,22 +3,39 @@
     <head>
         <meta charset="utf-8">
         <link id="estilo" rel="stylesheet" type="text/css" href="./css/bocetos.css">
-        <title>Miembros</title>
+        <title>Bocetos</title>
     </head>
     <body>
         <h1>Bocetos de la práctica:<h1>
-                <h2>Página de inicio:</h2>
-                <img src ="./img/pagina_inicio_web.png"><p></p>
-                <h2>Página de un juego:</h2>
-                <img src ="./img/pagina_videojuego.png"><p></p>
-                <h2>Página de busqueda de un juego:</h2>
-                <img src ="./img/pagina_busqueda_juegos.png"><p></p>
-                <h2>Página de perfil de un usuario:</h2>
-                <img src ="./img/pagina_perfil_usuario.png"><p></p>
-                <h2>Página principal de noticias:</h2>
-                <img src ="./img/boceto_pagina_principal_noticias.png"><p></p>
-                <h2>Formulario para añadir un juego con administrador:</h2>
-                <img src ="./img/boceto_formulario_annadir_juego_admin.png"><p></p>
+            <h3>Página de inicio:</h3>
+                    <img src ="./img/pagina_inicio_web.png"><p></p>
+            <h2> Juegos </h2>
+                    <h3>Página de un juego:</h3>
+                    <img src ="./img/pagina_videojuego.png"><p></p>
+                    <h3>Página de busqueda de un juego:</h3>
+                    <img src ="./img/pagina_busqueda_juegos.png"><p></p>
+                    <h3>Formulario para añadir un juego con administrador:</h3>
+                    <img src ="./img/boceto_formulario_annadir_juego_admin.png"><p></p>
+            <h2> Usuarios</h2>
+                    <h3>Página de perfil de un usuario:</h3>
+                    <img src ="./img/pagina_perfil_usuario.png"><p></p>
+                    <h3>Lista de juegos de un usuario:</h3>
+                    <img src ="./img/lista_juegos_usuario.png"><p></p>
+            <h2> Espacio para profesionales </h2>
+                    <h3>Página principal de noticias:</h3>
+                    <img src ="./img/boceto_pagina_principal_noticias.png"><p></p>
+                    <h3>Noticia:</h3>
+                    <img src ="./img/noticia.png"><p></p>
+                    <h3>Noticia modo edicion:</h3>
+                    <img src ="./img/noticias-edicion.png"><p></p>
+            <h2> Foros </h2>
+                    <h3>Página de foros:</h3>
+                    <img src ="./img/pagina_foros.png"><p></p>
+                    <h3>Crear foro:</h3>
+                    <img src ="./img/crear-foro.png"><p></p>
+                    <h3>Página principal de un foro:</h3>
+                    <img src ="./img/subforo.png"><p></p>
+                    
 
     </body>
 </html>
