añadido enlaces en headers y logo de bts

--- a/static/detalles.html
+++ b/static/detalles.html
@@ -5,6 +5,14 @@
         <link id="estilo" rel="stylesheet" type="text/css" href="./default.css">
         <title> Detalles </title>
     </head>
+  <header>
+    <p> <a href="index.html"><img src="img/logo.png" width="100" height="100"> </a></p>
+    <p><a href="bocetos.html">Bocetos</a>            </p>
+    <p><a href="contacto.html">Contacto</a>          </p>
+    <p><a href="detalles.html">Detalles</a>          </p>
+    <p><a href="miembros.html">Miembros</a>          </p>
+    <p><a href="planificacion.html">Planificacion</a></p>
+  </header>
     <body>
         <h1> Detalles de la Aplicación Web </h1>
         <h2> Introducción </h2>
