--- a/static/planificacion.html
+++ b/static/planificacion.html
@@ -1,101 +1,78 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link id="estilo" rel="stylesheet" type="text/css" href="./default.css" />
     <meta charset="UTF-8" />
+    <title>Planificacion</title>
   </head>
-  <title>Planificacion</title>
+  <header>
+    <p> <a href="index.html"><img src="img/logo.png" width="100" height="100"> </a></p>
+    <p><a href="bocetos.html">Bocetos</a>            </p>
+    <p><a href="contacto.html">Contacto</a>          </p>
+    <p><a href="detalles.html">Detalles</a>          </p>
+    <p><a href="miembros.html">Miembros</a>          </p>
+    <p><a href="planificacion.html">Planificacion</a></p>
+  </header>
   <body>
     <section>
       <h1>Planificacion del proyecto</h1>
-      <h2>
-        Tareas a realizar:
-      </h2>
-      <section>
-        <h3>
-          Desarrollo de funcionalidades:
-        </h3>
+      <h2>Tareas a realizar:</h2>
+      <div>
+        <h3>Desarrollo de funcionalidades:</h3>
         <ul>
           <li>
             Funcionalidad 1: inicio de sesion y creacion de cuentas de usuario
           </li>
-          <li>
-            Funcionalidad 2: adición de videojuegos
-          </li>
-          <li>
-            Funcionalidad 3: foros y subforos 
-          </li>
-          <li>
-            Funcionalidad 4: noticias y guías de videojuegos
-          </li>
+          <li>Funcionalidad 2: adición de videojuegos</li>
+          <li>Funcionalidad 3: foros y subforos</li>
+          <li>Funcionalidad 4: noticias y guías de videojuegos</li>
           <li>
             Funcionalidad 5: reviews cortas escritas por jugadores casuales
           </li>
         </ul>
-      </section>
+      </div>
       <section>
-        <h3>
-          Reparto del trabajo
-        </h3>
+        <h3>Reparto del trabajo</h3>
         <p>
-          Cada compañero del equipo realizará su propia funcionalidad para así conseguir un mayor conocimiento 
-          en el área del desarrollo web, diseño gráfico y diseño de bases de datos.
+          Cada compañero del equipo realizará su propia funcionalidad para así
+          conseguir un mayor conocimiento en el área del desarrollo web, diseño
+          gráfico y diseño de bases de datos.
         </p>
       </section>
       <section>
-        <h3>
-          Plazos de entrega
-        </h3>
+        <h3>Plazos de entrega</h3>
         <ul>
-          <li>
-            Definicion del proyecto: antes del 14 de febrero del 2025
-            <ul>
-              <li>
-                Redacción del sales pitch
-              </li>
-              <li>
-                Descripción general
-              </li>
-              <li>
-                Revisión de los requisitos
-              </li>
-              <li>
-                Organización del equipo
-              </li>
-            </ul>
-          </li>
+          <li>Definicion del proyecto: antes del 14 de febrero del 2025</li>
+          <ul>
+            <li>Redacción del sales pitch</li>
+            <li>Descripción general</li>
+            <li>Revisión de los requisitos</li>
+            <li>Organización del equipo</li>
+          </ul>
           <li>
             Exposición de diseño y estructura: antes del 14 de febrero de 2025
-            <ul>
-              Bocetos de los diseños de la página web
-            </ul>
-            <ul>
-              Estructura de archivos y carpetas
-            </ul>
           </li>
+          <ul>
+            <li>Bocetos de los diseños de la página web</li>
+            <li>Estructura de archivos y carpetas</li>
+          </ul>
           <li>
-            Implementación básica de la página web: antes del 8 de marzo del 2025
-            <ul>
-              Implementación mínima de la página web
-            </ul>
-            <ul>
-              Testing de la página web y correción de errores
-            </ul>
+            Implementación básica de la página web: antes del 8 de marzo de 2025
           </li>
+          <ul>
+            <li>Implementación mínima de la página web</li>
+            <li>Testing de la página web y corrección de errores</li>
+          </ul>
           <li>
-            Implementación avanzada de la página web: antes del 28 de abril del 2025
-            <ul>
-              Mejora de diseño usando JavaScript
-            </ul>
-            <ul>
-              Optimización de acceso a BBDD
-            </ul>
-            <ul>
-              Corrección de errores indicados por el cliente
-            </ul>
+            Implementación avanzada de la página web: antes del 28 de abril de
+            2025
           </li>
-          <li>
-            Entrega del proyecto final al cliente: 9 de mayo de 2025
-          </li>
+          <ul>
+            <li>Mejora del diseño usando JavaScript y CSS</li>
+            <li>Optimización de acceso a BBDD</li>
+            <li>Corrección de errores indicados por el cliente</li>
+          </ul>
+          <li>Entrega del proyecto final al cliente: 9 de mayo de 2025</li>
         </ul>
       </section>
       <section>
