--- a/static/contacto.html
+++ b/static/contacto.html
@@ -5,6 +5,14 @@
         <link id="estilo" rel="stylesheet" type="text/css" href="./css/default.css">
         <title>Contacto</title>
     </head>
+  <header>
+    <p> <a href="index.html"><img src="img/logo.png" width="100" height="100"> </a></p>
+    <p><a href="bocetos.html">Bocetos</a>            </p>
+    <p><a href="contacto.html">Contacto</a>          </p>
+    <p><a href="detalles.html">Detalles</a>          </p>
+    <p><a href="miembros.html">Miembros</a>          </p>
+    <p><a href="planificacion.html">Planificacion</a></p>
+  </header>
     <body>
         <h1>Formulario de contacto</h1>
         <div class="form-container">
