Descripciones y reviews y opiniones

--- a/static/bocetos.html
+++ b/static/bocetos.html
@@ -17,25 +17,44 @@
         <h1>Bocetos de la práctica:<h1>
             <h3>Página de inicio:</h3>
                     <img src ="./img/pagina_inicio_web.png"><p></p>
-            <h2> Juegos </h2>
+                    <p>En la página principal apareceran varios juegos de géneros aleatorios y en la parte superior una lista de juegos nuevos y que han salido recientemente.
+                        También aparecen noticas destacadas y recientes. Al fondo de la página, hay varios hipervinculos de filtros los cuales al ser clickeados llevan a la página de busqueda.
+                        </p>
                     <h3>Página de un juego:</h3>
                     <img src ="./img/pagina_videojuego.png"><p></p>
+                    <p>Aparecen varias imagenes del juego, ya sean screenshots o de trailer o de cinematicas, las cuales pueden ser navegadas por el usuario. Hay un boton que permite
+                        asignar el juego al usuario y lo registra en su cuenta. A la derecha aparecen las diferentes plataformas donde el juego está disponible y su precio, si aplica.
+                    </p>
                     <h3>Página de busqueda de un juego:</h3>
                     <img src ="./img/pagina_busqueda_juegos.png"><p></p>
+                    <p>Exiten varios filtros: como géneros preseleccionados o una barra de busqueda para buscar tags especificos. También hay una barra slider que permite filtrar
+                        juegos por hasta el máximo de un precio. La lista de juegos resultante de la busqueda puede tener varias caras, y la web te informa cuantos has visto del total.
+                    </p>
                     <h3>Formulario para añadir un juego con administrador:</h3>
                     <img src ="./img/boceto_formulario_annadir_juego_admin.png"><p></p>
+                    <p>Un simple formulario pop-up que permite a alguien con permisos en la web, modificar y añadir juegos a la base de datos. Existe una funcionalidad para añadir
+                        tiendas disponibles y un boton el cual al terminar, proporciona una previsualización de la página resultante.
+                    </p>
+                    <h3>Reviews y opiniones</h3>
+                    <img src = "./img/boceto_pagina_reviews_y_opiniones.png"><p></p>
+                    <p>Aparece la nota media de un juego, el numero de estrellas 1,2,3,4,5 que ha recibido y abajo las propias reviews, con su nota, la foto de perfil del usuario que la escribío y la propia review.</p>
             <h2> Usuarios</h2>
                     <h3>Página de perfil de un usuario:</h3>
                     <img src ="./img/pagina_perfil_usuario.png"><p></p>
+                    <p>La foto de perfil y la descripción puede ser cambiada por un usuario o un administrador simplemente haciendo click. Hay 2 botones: para seguir y añadir amigo.
+                        Aparecen las reseñas dejadas por el usuario, su lista de juegos y de amigos.
+                    </p>
                     <h3>Lista de juegos de un usuario:</h3>
                     <img src ="./img/lista_juegos_usuario.png"><p></p>
             <h2> Espacio para profesionales </h2>
                     <h3>Página principal de noticias:</h3>
                     <img src ="./img/boceto_pagina_principal_noticias.png"><p></p>
+                    <p>Las noticias pueden ser filtadas por si son guías, si han sido destacadas, juegos que sigue el usuario y recientes. </p>
                     <h3>Noticia:</h3>
                     <img src ="./img/noticia.png"><p></p>
                     <h3>Noticia modo edicion:</h3>
                     <img src ="./img/noticias-edicion.png"><p></p>
+
             <h2> Foros </h2>
                     <h3>Página de foros:</h3>
                     <img src ="./img/pagina_foros.png"><p></p>
